Style: Обновить checkstyle